--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:drawable="@color/primaryColor"/>
+    
     <item
-        android:drawable="@color/primaryColor"/>
-
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/screen"/>
-    </item>
+        android:width="300dp"
+        android:height="300dp"
+        android:drawable="@drawable/screen"
+        android:gravity="center" 
+    />
 
 </layer-list>
