--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary_dark">#000000</color>
     <color name="primaryColor">#3F51B5</color>
+    <color name="status_bar_color">#3F51B5</color>
 </resources>
