--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/primaryColor"
     android:gravity="center">
-    <ImageView
+    <!-- <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_margin="-24dp"
         android:src="@drawable/screen"
-    />
+    /> -->
 </LinearLayout>
